tests/ui/typech/generic_type_method_static_call_returned_type_incomp.lm
struct A<T> {}

impl<T> A<T> {
    pub fn bar(val: T) -> T {
        return val;
    }
}

fn bar() {
    let _: Int32 = A<Boolean>::bar(false);
}
